{
    "name": "InputActions",
    "maps": [
        {
            "name": "Player1",
            "id": "5707e3a0-c51a-437e-a92d-8992bbe50465",
            "actions": [
                {
                    "name": "HorizontalMove",
                    "type": "Value",
                    "id": "3d180830-5982-47de-a9a6-9a8c33e8bac1",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "a1f98c1c-56bd-4b17-bdb9-d5255c604c89",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "A/S [WASDKeyboard]",
                    "id": "f23ac59b-94a8-4a0b-8bce-a2efcefc2028",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMove",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "3e7c5a43-118d-4915-9a19-129202f37976",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "WASDKeyboard",
                    "action": "HorizontalMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "90afdf8f-f4fc-441c-b9bd-b04ab2a9852f",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "WASDKeyboard",
                    "action": "HorizontalMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "ce2a4303-b87a-4ca2-a5a4-addf0e60c0f1",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "WASDKeyboard",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Player2",
            "id": "8b5bd19a-33f5-4b50-8411-5d28d5f508a8",
            "actions": [
                {
                    "name": "HorizontalMove",
                    "type": "Value",
                    "id": "b5505cbb-e445-4b30-b17e-ade53447aafd",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "8f846af4-e222-49d9-bf86-b87ece1d1b42",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "Left/Right [ArrowKeyboard]",
                    "id": "5ea215e0-52e4-44d9-ad13-52508d583d1e",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMove",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "be97af9d-d1a4-4405-a090-4908426e72bf",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "ArrowsKeyboard",
                    "action": "HorizontalMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "b35ac835-ad22-4256-8cec-9f5da8e9671c",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "ArrowsKeyboard",
                    "action": "HorizontalMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "f5f11274-0f57-4dd9-836b-3ccdb8767c43",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "ArrowsKeyboard",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "71a36b8f-784f-4229-9991-93a4f9272da9",
            "actions": [
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "68526568-cf9b-467e-9acd-73a78b1fcd91",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "573fc0c4-378b-4b1e-9311-d0f154a9288e",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "WASDKeyboard;ArrowsKeyboard",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "WASDKeyboard",
            "bindingGroup": "WASDKeyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "ArrowsKeyboard",
            "bindingGroup": "ArrowsKeyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}